# elvm-optimizer

./: .gitignore  README.md  apply.sh  design.txt  dune-project  elvm.opam  elvm_opt.opam
_build/: log
block/: block_optimizer_util.ml  general_block_optimizer.ml  general_block_optimizer.mli  reference_provider_intf.ml  test_general_block_optimizer.ml
lib/: ast.ml  ast.mli  ast_optimizer.ml  ast_optimizer.mli  block.mli  compile.ml  dune  eir.ml  eir.mli  elvm.ml  elvm_instruction.ml  elvm_program.ml  elvm_program.mli  environment.ml  environment.mli  environment_intf.ml  expression.ml  expression.mli  graph.ml  graph.mli  ir.ml  ir.mli  lift.ml  lift.mli  liveness.ml  liveness.mli  liveness_analyzer.ml  node.ml  node.mli  optimizer.ml  optimizer.mli  program.ml  program.mli  simulator.ml  simulator.mli  statement.ml  statement_graph_optimizer.ml  statement_intf.ml  substitute_util.ml  substituter.ml
lib/ast/: ast.ml  ast.mli  ast_expression.ml  ast_statement.ml  ast_statement.mli
test/: dune  graph_util.ml  test_ast_expression.ml  test_ast_expression_optimizer.ml  test_ast_lhs_propagator.ml  test_ast_rhs_propagator.ml  test_ast_simulator.ml  test_ast_statement.ml  test_ast_statement_optimizer.ml  test_ast_variable.ml  test_block.ml  test_compile.ml  test_eir.ml  test_eir_lift_to_ast.ml  test_eir_parse.ml  test_environment.ml  test_expression_optimize.ml  test_expression_simplify.ml  test_ir_from_elvm.ml  test_lift.ml  test_liveness.ml  test_liveness_analyzer.ml  test_statement_graph_optimizer.ml  test_statement_optimize.ml  test_statement_references.ml
(+207 files in other folders)
